force-app/main/default/objects/JBCXM__CTAGroup__c/fields/JBCXM__ActionPlan__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ActionPlan__c</fullName>
    <label>Action Plan</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>