force-app/main/default/objects/JBCXM__CTAGroup__c/fields/JBCXM__ActiveDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ActiveDate__c</fullName>
    <label>Active Date</label>
    <type>Date</type>
</CustomField>