force-app/main/default/objects/JBCXM__CTAGroup__c/fields/JBCXM__ClosedLostObjectiveCount__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ClosedLostObjectiveCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Closed Lost Objective Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>