force-app/main/default/objects/JBCXM__CTAGroup__c/fields/JBCXM__GSDaysDue__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GSDaysDue__c</fullName>
    <formula>JBCXM__OriginalDueDate__c -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>