force-app/main/default/objects/JBCXM__CTAGroup__c/fields/JBCXM__GSOverdueType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GSOverdueType__c</fullName>
    <formula>IF( JBCXM__Status__r.JBCXM__SystemName__c =  &quot;Active&quot; , IF( JBCXM__DueDate__c - TODAY() &lt; 0, &quot;Overdue&quot;, IF(JBCXM__DueDate__c - TODAY() &gt; 7, &quot;Open&quot;, &quot;Due next 7 days&quot;)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Type</label>
    <type>Text</type>
</CustomField>