force-app/main/default/objects/JBCXM__CTAGroup__c/fields/JBCXM__GSPercentComplete__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GSPercentComplete__c</fullName>
    <formula>IF(  JBCXM__TotalObjectiveCount__c == 0 ,  IF( JBCXM__Status__r.Name == &quot;Closed&quot; ,1,0) , ( (JBCXM__ClosedWonObjectiveCount__c + JBCXM__ClosedLostObjectiveCount__c) /  JBCXM__TotalObjectiveCount__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>