force-app/main/default/objects/JBCXM__CTAGroup__c/fields/JBCXM__HighLights__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__HighLights__c</fullName>
    <label>Company Highlights</label>
    <length>35000</length>
    <type>LongTextArea</type>
</CustomField>