force-app/main/default/objects/JBCXM__CTAGroup__c/fields/JBCXM__OpenObjectiveCount__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OpenObjectiveCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Open Objective Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>