force-app/main/default/objects/JBCXM__CTAGroup__c/fields/JBCXM__Owner__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Owner</relationshipName>
    <type>Lookup</type>
</CustomField>