force-app/main/default/objects/JBCXM__CTAGroup__c/fields/JBCXM__Relationship__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship</label>
    <referenceTo>JBCXM__GSRelationship__c</referenceTo>
    <relationshipLabel>CTAGroup Relationship</relationshipLabel>
    <relationshipName>CTAGroupRelationship</relationshipName>
    <type>Lookup</type>
</CustomField>