force-app/main/default/objects/JBCXM__CTAGroup__c/fields/JBCXM__Status__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Status</label>
    <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
    <relationshipLabel>Status</relationshipLabel>
    <relationshipName>Status</relationshipName>
    <type>Lookup</type>
</CustomField>