force-app/main/default/objects/JBCXM__CTAGroup__c/fields/JBCXM__SuccessPlanType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SuccessPlanType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Success Plan Type</label>
    <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
    <relationshipLabel>Type</relationshipLabel>
    <relationshipName>Type</relationshipName>
    <type>Lookup</type>
</CustomField>