force-app/main/default/objects/JBCXM__CTAGroup__c/fields/JBCXM__Template__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>JBCXM__SuccessPlanTemplate__c</referenceTo>
    <relationshipLabel>SuccessPlanTemplate</relationshipLabel>
    <relationshipName>SuccessPlanTemplate</relationshipName>
    <type>Lookup</type>
</CustomField>